# rust-trait-lifetime-how-to

./: Cargo.toml  README.md  rustfmt.toml  without-self-outlive-f.md
src/: lib.rs  map_api.rs  map_api_impl.rs  util.rs
src/data/: impl_level.rs  impl_level_map.rs  impl_ref.rs  impl_ref_mut.rs  impl_static_levels.rs  mod.rs
