[package]
name = "rust-trait-lifetime-how-to"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
futures = { version = "0.3.28" }
futures-util = { version = "0.3" }
stream-more = "0.1.3"

serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = { version = "1.0.85", default-features = false, features = ["preserve_order"] }

tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["full"] }
